# gitops-replacer

./: MANIFEST.in  README.md  example.json  pyproject.toml
.github/workflows/: publish.yml  release.yml
src/gitops_replacer/: __init__.py  __main__.py
